--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "baymedr"]
+	path = baymedr
+	url = https://github.com/maxlinde/baymedr
+	shallow = true
+	registered = true
